<resources>
    <string name="app_name">Ai Image Generator</string>

    <!--New Password Activity-->
    <string name="backbtn">backBtn</string>
    <string name="create_new_password">Create new password</string>
    <string name="pwd_detail_text">Create your new password if you forget it.</string>
    <string name="new_password">New Password</string>
    <string name="password_hint">********</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="continue_btn">Continue</string>


    <!--OnBoarding Activity One, Two, Three-->
    <string name="girlimage">girlImage</string>
    <string name="onboading_text1">Turn your words into\nartwork instantly</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="bearimage">bearImage</string>
    <string name="onboarding_text3">Unleash your creative\nideas with saved art</string>
    <string name="get_started">Get Started</string>
    <string name="artimage">artImage</string>
    <string name="onboarding_text2">Create and share your\nartwork with ease</string>

    <!--Otp Code Verification Activity-->
    <string name="otp_code_verification">OTP code verification</string>
    <string name="otp_detail_text">We have send an otp code to your email\nand*****@gmail.com Enter the otp code below to verify</string>
    <string name="don_t_receive_email">Don\'t receive Email?</string>
    <string name="you_can_resend_code_in">You can resend code in </string>
    <string name="s">s</string>
    <string name="_timer">00</string>

    <!--Reset Password Activity-->
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="please_enter_your_email_to_get_otp">please enter your email to get OTP</string>
    <string name="email">Email</string>

    <!--Sign In With Password Activity-->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_detail_text"><![CDATA[please enter your email & password to sign in]]></string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="googlebtn">googleBtn</string>
    <string name="facebookbtn">facebookBtn</string>
    <string name="twitterbtn">twitterBtn</string>
    <string name="applebtn">appleBtn</string>
    <string name="sign_in">Sign in</string>

    <!--Sign In Activity-->
    <string name="welcome_let_s_dive_in_into_your_account">Welcome let’s dive in into your account!</string>
    <string name="continue_with_google">continue with Google</string>
    <string name="continue_with_apple">continue with Apple</string>
    <string name="continue_with_facebook">continue with Facebook</string>
    <string name="continue_with_twitter">continue with Twitter</string>

    <!--Dialog-->
    <string name="dialog_text">please wait....\nyou will be directed to the homepage</string>

    <!--Sign Up Activity-->
    <string name="hello_there">Hello there</string>
    <string name="sign_up_text"><![CDATA[Please enter your email & password\nto create an account.]]></string>
    <string name="i_agree_to_term_amp_privacy_policy"><![CDATA[I agree to Term & Privacy Policy]]></string>

    <!--Personal Info Activity-->
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="_92_3000000000">92 3000000000</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="gender">Gender</string>
    <string name="finish">Finish</string>
    <string name="personal_info_text_detail">please enter your profile don’t worry only\nyou can see your personal data no one else\nwill be able to see it. or you can skip it for\nnow</string>
    <string name="enter_personal_info">Enter personal info</string>
    <string-array name="gender_name">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--Home fragment-->
    <string name="logo">Logo</string>
    <string name="create_a_visions_with_ai">create a visions with AI</string>
    <string name="what_visions_are_you_bringing_to_life_today">What visions are you bringing to life today!</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="square">Square</string>
    <string name="portrait">Portrait</string>
    <string name="landsacpe">Landsacpe</string>
    <string name="select_style">Select Style</string>
    <string name="no_style">No style</string>
    <string name="euphoric">Euphoric</string>
    <string name="tattoo">Tattoo</string>
    <string name="_3d_game">3D Game</string>
    <string name="generate">Generate</string>
    <string name="watch_an_ad">Watch an ad</string>


    <!--Saved fragment-->
    <string name="anime_v2">Anime V2</string>
    <string name="saved">Saved</string>

    <!--Permission Activity-->
    <string name="gtand_permissions_to_start_app">Gtand permissions to start app</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="start">Start</string>
    <string name="title_activity_language">LanguageActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <!--Profile Fragment-->
    <string name="save">Save</string>
    <string name="personal_info">Personal Info</string>

    <!--Language Activity-->
    <string name="language">Language</string>
    <string name="english">English</string>

    <!--Setting Activity-->
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="next_arrow"><![CDATA[>]]></string>
    <string name="notification">Notification</string>
    <string name="security">Security</string>
    <string name="follow_us_on_social_media">Follow us on social media</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>


    <!--Security Activity-->
    <string name="biometric_id">Biometric ID</string>
    <string name="face_id">Face ID</string>
    <string name="sms_authenticator">SMS Authenticator</string>
    <string name="google_authenticator">Google Authenticator</string>
    <string name="device_management">Device Management</string>

    <!--Follow Us Activity-->
    <string name="discord">Discord</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="telegram">Telegram</string>

    <!--Logout Dialog-->
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>

    <!--navigation menu options-->
    <string name="home">Home</string>
    <string name="explore">Explore</string>


    <!--Toast Strings-->
    <string name="first_grant_all_permissions">First grant all permissions</string>
    <string name="fail_to_save_details">Fail to save details!</string>
    <string name="check_your_inbox_password_resetting_email_sent">Check your inbox\nPassword resetting email sent</string>
    <string name="enter_your_email">Enter your email!</string>
    <string name="fail_due_to">fail due to\n%1$s</string>
    <string name="sign_in_successful">Sign in Successful</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="fill_all_fields">Fill all fields!</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="accept_term_and_privacy_policy">Accept Term and Privacy Policy</string>


    <!--Dialog-->
    <string name="updating_info">Updating Info</string>
    <string name="signing_in">Signing In</string>
    <string name="signing_up">Signing Up</string>

    <!--Image Style-->
    <string name="art_url">https://api.deepai.org/api/text2img</string>
    <string name="creatures_url">https://api.deepai.org/api/cute-creature-generator</string>
    <string name="fantasy_url">https://api.deepai.org/api/fantasy-world-generator</string>
    <string name="architecture_url">https://api.deepai.org/api/text2img</string>
    <string name="logo_url">https://api.deepai.org/api/text2img</string>
    <string name="cyber_url">https://api.deepai.org/api/cyberpunk-generator</string>
    <string name="anime_url">https://api.deepai.org/api/anime-portrait-generator</string>
    <string name="old_url">https://api.deepai.org/api/old-style-generator </string>
    <string name="painting_url">https://api.deepai.org/api/renaissance-painting-generator</string>
    <string name="abstract_url">https://api.deepai.org/api/abstract-painting-generator</string>
    <string name="impression_url">https://api.deepai.org/api/impressionism-painting-generator</string>
    <string name="surreal_url">https://api.deepai.org/api/surreal-graphics-generator</string>
    <string name="threeD_url">https://api.deepai.org/api/3d-objects-generator</string>
    <string name="origami_url">https://api.deepai.org/api/origami-3d-generator</string>
    <string name="hologram_url">https://api.deepai.org/api/hologram-3d-generator</string>
    <string name="watercolor_url">https://api.deepai.org/api/watercolor-painting-generator</string>


    <!--Style For Image-->
    <string name="ai_art">Ai Art</string>
    <string name="selected">Selected</string>
    <string name="creatures">Creatures</string>
    <string name="architecture">Architecture</string>
    <string name="cyberpunk">Cyberpunk</string>
    <string name="anime">Anime</string>
    <string name="old_style">Old Style</string>
    <string name="painting">Painting</string>
    <string name="_abstract">Abstract</string>
    <string name="impressionism">Impressionism</string>
    <string name="surreal">Surreal</string>
    <string name="_3d">3D</string>
    <string name="origami">Origami</string>
    <string name="hologram">Hologram</string>


</resources>