<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.SignUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:contentDescription="@string/backbtn"
            android:src="@drawable/back_btn"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcomeText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/hello_there"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/welcomeText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/sign_up_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText1" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:focusable="false"
        app:boxBackgroundMode="filled"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/emailText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="@dimen/_12sdp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pwdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:focusable="false"
        app:boxBackgroundMode="filled"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/pwdText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:textColorHint="@color/dark_gray"
            android:textSize="@dimen/_12sdp"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/termsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/i_agree_to_term_amp_privacy_policy"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <LinearLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsCheckBox">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/sign_in"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/continueTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/signInLayout">

        <LinearLayout
            android:id="@+id/lineLayout1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/or_continue_with"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:id="@+id/lineLayout2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otherSignUoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_25sdp"
        android:paddingEnd="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@+id/continueTextLayout">

        <ImageView
            android:id="@+id/googleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/googlebtn"
            android:src="@drawable/google_icon" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/appleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/applebtn"
            android:src="@drawable/apple_icon" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/facebookBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/facebookbtn"
            android:src="@drawable/facebook_icon" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/twitterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/twitterbtn"
            android:src="@drawable/twitter_icon" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/custom_round_background"
        android:backgroundTint="@color/dark_blue"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>